--- a/jumbotron.html
+++ b/jumbotron.html
@@ -20,8 +20,8 @@
 </div>
 <div class="container mt-1">
     <h2>buttons</h2>
-    <button type="button" class="btn btn-primary">Information</button>
-    <button type="button" class="btn btn-danger">contact us </button>
+    <button type="button" class="btn btn-primary">Information <span class="badge badge-warning">15</span></button>
+    <button type="button" class="btn btn-danger">contact us <span class="badge-pill badge-info"> 40</span></button>
 </div>
 </body>
 </html>
