--- a/jumbotron.html
+++ b/jumbotron.html
@@ -23,5 +23,9 @@
     <button type="button" class="btn btn-primary">Information <span class="badge badge-warning">15</span></button>
     <button type="button" class="btn btn-danger">contact us <span class="badge-pill badge-info"> 40</span></button>
 </div>
+<br>
+<div class="progress">
+    <div class="progress-bar" style="width:40%">40%</div>
+</div>
 </body>
 </html>
